--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "FilterByExternalAssociation",
-  "description": "Allow you to filter items on a node depending on a External association",
-  "version": "1.10.0",
-  "main": "cwFilterByExternalAssociation.js",
+  "name": "Tree",
+  "description": "Allow you to display your data into a 2 way Tree. (You can only use One Way if you want) By right Clicking on nodes, you can display diagram PopOut or go to the objectPage(defaultview)",
+  "version": "0.0.0",
+  "main": "cwLayoutTree.js",
   "scripts": {
     "test": ""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nevakee716/FilterByExternalAssociation"
+    "url": "https://github.com/nevakee716/Tree"
   },
   "author": "Mathias PFAUWADEL",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nevakee716/FilterByExternalAssociation/issues"
+    "url": "https://github.com/nevakee716/Tree/issues"
   },
   "homepage": "",
-  "wiki": "https://github.com/nevakee716/FilterByExternalAssociation/wiki",
-  "evolve-version": "4.0 - 4.1"
+  "wiki": "https://github.com/nevakee716/Tree/wiki",
+  "evolve-version": "4.1"
 }
