--- a/src/cwLayoutTree.layout.config.json
+++ b/src/cwLayoutTree.layout.config.json
@@ -17,9 +17,15 @@
         "Type": 0
     },
     {
-        "Id": "horizontalSpacing",
-        "DisplayName": "Horizontal Spacing",
-        "Description": "Horizontal Spacing between node of the tree, usually 150 is good value",
+        "Id": "horizontalOffset",
+        "DisplayName": "Horizontal Offset",
+        "Description": "Horizontal Spacing Factor * nbr Char + Horizontal Offset = distance between node of the tree, usually 20 is good value",
+        "Type": 0
+    },
+    {
+        "Id": "horizontalSpacingFactor",
+        "DisplayName": "Horizontal Spacing Factor",
+        "Description": "Horizontal Spacing Factor * nbr Char + Horizontal Offset = distance between node of the tree, usually 6 is good value",
         "Type": 0
     },
     {
